package com.yowpainter.modules.artwork.domain.model;

public enum ArtworkStatus {
    DRAFT,
    PUBLISHED,
    ON_SALE,
    SUSPENDED,
    SOLD,
    ARCHIVED,
    DELETED
}
